# agario-ros2

./: README.md
agario_ros/: CMakeLists.txt  package.xml
agario_ros/agario_ros_game/: agario.py  model.py
agario_ros/agario_ros_game/entities/: cell.py  player.py  playercell.py
agario_ros/agario_ros_game/network/: client.py
agario_ros/include/agario_ros/: agario_server.hpp
agario_ros/msg/: PlayerCommands.msg
agario_ros/scripts/: agario_client_node.py  agario_server_node.py
agario_ros/src/: agario_server_node.cpp
agario_ros/srv/: RegisterPlayer.srv
docker/: docker-compose.yml  dockerfile
